--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!--comment line-->
   <table cellspacing="20">
     <tr>
-      <td><img src="Image\Noma.png" alt="Noma Profile Pic"></td>
+      <td><img src="Noma.png" alt="Noma Profile Pic"></td>
       <td>
         <h1>Nomadeva Rao</h1>
         <p><em>I'm a Assocate <strong>Quality Assurance</strong> Engineer.</em></p>
